--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "braintree-web-drop-in-react": "^1.1.2",
     "moment": "^2.28.0",
     "react": "^16.13.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
